adding basic calculator display

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <script src="js-file.js" defer></script>
 </head>
 <body>
+    <div id="calculator">
+        <input type="text" id="display" name="display">
+        <div>
+            <button type="button" id="7">7</button>
+            <button type="button" id="8">8</button> 
+            <button type="button" id="9">9</button> 
+        </div>
+        <div>
+            <button type="button" id="4">4</button>
+            <button type="button" id="5">5</button> 
+            <button type="button" id="6">6</button> 
+        </div>
+        <div>
+            <button type="button" id="1">1</button>
+            <button type="button" id="2">2</button> 
+            <button type="button" id="3">3</button> 
+        </div>
+        <div>
+            <button type="button">clear</button> 
+            <button type="button">=</button>
+        </div>    
+    </div>
     
 </body>
 </html>
