fixing display slightly

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <button type="button" id="3">3</button> 
         </div>
         <div>
+            <button type="button" id="0">0</button>
+            <button type="button" id=".">.</button> 
+        </div>
+        <div>
             <button type="button">clear</button> 
             <button type="button">=</button>
         </div>    
