--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 </head>
 <body>
     <div id="calculator">
-        <input type="text" id="display" name="display">
+        <input type="text" id="display" name="display" value=0>
         <div>
-            <button type="button" id="7">7</button>
-            <button type="button" id="8">8</button> 
-            <button type="button" id="9">9</button> 
+            <button type="button" class ="num" id="7">7</button>
+            <button type="button" class ="num" id="8">8</button> 
+            <button type="button" class ="num" id="9">9</button> 
         </div>
         <div>
-            <button type="button" id="4">4</button>
-            <button type="button" id="5">5</button> 
-            <button type="button" id="6">6</button> 
+            <button type="button" class ="num" id="4">4</button>
+            <button type="button" class ="num" id="5">5</button> 
+            <button type="button" class ="num" id="6">6</button> 
         </div>
         <div>
-            <button type="button" id="1">1</button>
-            <button type="button" id="2">2</button> 
-            <button type="button" id="3">3</button> 
+            <button type="button" class ="num" id="1">1</button>
+            <button type="button" class ="num" id="2">2</button> 
+            <button type="button" class ="num" id="3">3</button> 
         </div>
         <div>
-            <button type="button" id="0">0</button>
-            <button type="button" id=".">.</button> 
+            <button type="button" class ="num" id="0">0</button>
+            <button type="button" class ="num" id=".">.</button> 
         </div>
         <div>
-            <button type="button">clear</button> 
-            <button type="button">=</button>
+            <button type="button" id="clear">clear</button> 
+            <button type="button" id="equals">=</button>
         </div>    
     </div>
     
