--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
             <button type="button" class="num" id="7">7</button>
             <button type="button" class="num" id="8">8</button> 
             <button type="button" class="num" id="9">9</button> 
+            <button type="button" class="op" id="/">/</button> 
         </div>
         <div>
             <button type="button" class="num" id="4">4</button>
             <button type="button" class="num" id="5">5</button> 
             <button type="button" class="num" id="6">6</button> 
+            <button type="button" class="op" id="*">x</button> 
         </div>
         <div>
             <button type="button" class="num" id="1">1</button>
             <button type="button" class="num" id="2">2</button> 
             <button type="button" class="num" id="3">3</button> 
+            <button type="button" class="op" id="-">-</button> 
         </div>
         <div>
             <button type="button" class="num" id="0">0</button>
-            <button type="button" class="num" id=".">.</button> 
+            <button type="button" id=".">.</button> 
+            <button type="button" class="op" id="+">+</button> 
         </div>
         <div>
             <button type="button" id="clear">clear</button> 
