editted layout and added a preview

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div id="calculator">
+        <div id="preview"></div>
         <input type="text" id="display" name="display" value=0>
         <div>
             <button type="button" class="num" id="7">7</button>
@@ -31,13 +32,13 @@
             <button type="button" class="op" id="-">-</button> 
         </div>
         <div>
-            <button type="button" class="num" id="0">0</button>
             <button type="button" id=".">.</button> 
+            <button type="button" class="num" id="0">0</button>
+            <button type="button" id="equals">=</button>
             <button type="button" class="op" id="+">+</button> 
         </div>
         <div>
             <button type="button" id="clear">clear</button> 
-            <button type="button" id="equals">=</button>
         </div>    
     </div>
     
